Fix: community name overflows the segment, Add error display to postlist component

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -406,3 +406,15 @@ small.error {
   border-radius: 5px;
   z-index: 1000;
 }
+
+@media screen and (max-width: 1000px){
+  .resize-font {
+  	font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .resize-font {
+  	font-size: 1.5rem;
+  }
+}
